k8s/base/minio/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: streamforge

spec:
  replicas: 1

  selector:
    matchLabels:
      app: minio

  template:
    metadata:
      labels:
        app: minio

    spec:
      containers:
        - name: minio

          image: minio/minio

          args:
            - server
            - /data
            - --console-address
            - ":9001"

          ports:
            - containerPort: 9000
            - containerPort: 9001

          volumeMounts:
            - name: minio-storage
              mountPath: /data

      volumes:
        - name: minio-storage
          persistentVolumeClaim:
            claimName: minio-pvc
