k8s/base/minio/service.yml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: streamforge

spec:
  selector:
    app: minio

  ports:
    - name: api
      port: 9000
      targetPort: 9000

    - name: console
      port: 9001
      targetPort: 9001
